# harmonic

./: .gitignore  Cargo.toml  DESIGN_POLISH_PROGRESS.md  EVOLUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  justfile
.github/workflows/: ci.yml  pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  concepts.md  examples.md  intro.md  performance.md  quickstart.md
docs/src/concepts/: evolution.md  fitness.md  genome.md
docs/src/examples/: cli.md  library.md
harmonic-cli/: Cargo.toml
harmonic-cli/src/: commands.rs  evolve.rs  main.rs  ui.rs
harmonic-cli/tests/: integration_tests.rs
harmonic-core/: Cargo.toml
harmonic-core/src/: audio.rs  config.rs  fitness.rs  genome.rs  lib.rs
harmonic-ui/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
harmonic-ui/src/: App.css  App.tsx  Evolution.css  Evolution.tsx  EvolutionRunner.ts  audio.ts  index.css  lib.rs  synth.ts
harmonic-ui/src/components/: EvolutionPanel.tsx  FitnessGraph.tsx  Onboarding.tsx  PatchCardSkeleton.tsx  PatchDetailsPanel.tsx  PopulationGrid.tsx  ProgressBar.tsx  WaveformPreview.tsx
harmonic-ui/src/hooks/: useAnimations.ts  useAudio.ts  useStats.ts
harmonic-ui/src/styles/: EvolutionPanel.css  FitnessGraph.css  Onboarding.css  PatchCardSkeleton.css  PatchDetailsPanel.css  PopulationGrid.css  ProgressBar.css  WaveformPreview.css  accessibility.css  animations.css
harmonic-ui/src/utils/: persistence.ts  shortcuts.ts
