[workspace]
members = ["harmonic-core", "harmonic-cli", "harmonic-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex Nodeland <alex@ournature.studio>"]
license = "MIT"
repository = "https://github.com/alexnodeland/harmonic"

[workspace.dependencies]
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.19" }
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rayon = "1.7"
