[package]
name = "harmonic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fugue-evo = { workspace = true }
quiver = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = "0.5"
