[package]
name = "harmonic-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
harmonic-core = { path = "../harmonic-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
